Added Post for CHAD website

--- a/index.html
+++ b/index.html
@@ -44,6 +44,32 @@
             <!-- Projects -->
             <div id="projects">
 
+
+            <!-- Post -->
+            <div class="row post">
+                 <div class="sidebar col clearfix">
+                    <h3>CHAD</h3>
+                    <p class="tags">Website / Logo / Branding</p><br>
+                    <!-- Insert CHAD Description Here -->
+                 </div>
+                 <div class="main col clearfix">
+                        <div class="row">
+                        <a href="http://www.chadcie.com"><img src="img/chad screenshot.png" alt="chad screenshot" width="100%" height="100%" /></a>
+                        </div>
+                    <div class="row info clearfix">
+                        <div class="info-lft col">
+                       <!-- Insert Body Text Here -->
+                        </div>
+
+                        <div class="info-rt col clearfix">
+                        <!-- Insert Body Image Here -->
+                        </div>
+                    </div>
+
+                 </div>
+            </div> 
+            <!-- Post End -->  
+
             <!-- Post -->
             <div class="row post">
                  <div class="sidebar col clearfix">
