Added post for Young Guru Flyer

--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
         
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
-        <![endif]-->
-
+       
 
         <!-- Page (Container wrap) -->     
 
@@ -69,6 +66,33 @@
                  </div>
             </div> 
             <!-- Post End -->  
+
+             <!-- Post -->
+            <div class="row post">
+                 <div class="sidebar col clearfix">
+                    <h3>Young Guru</h3>
+                    <p class="tags">Flyer<br></p><br>
+                    <!-- <p>Insert Description here</p> -->
+                 </div>
+                 <div class="main col clearfix">
+                        <div class="row">
+                        <a href="img/guru_china_final.png"><img src="guru_china_final.png" alt="guru china flyer" width="100%" height="100%" /></a>      
+                        </div>
+                    <div class="row info clearfix">
+                        <div class="info-lft col">
+                       <!-- Insert Body Text Here -->
+                        </div>
+
+                        <div class="info-rt col clearfix">
+                        <!-- Insert Body Image Here -->
+                        </div>
+                    </div>
+
+                 </div>
+            </div> 
+            <!-- Post End -->   
+
+
 
             <!-- Post -->
             <div class="row post">
