--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                  </div>
                  <div class="main col clearfix">
                         <div class="row">
-                        <a href="img/guru_china_final.png"><img src="guru_china_final.png" alt="guru china flyer" width="100%" height="100%" /></a>      
+                        <a href="img/guru_china_final.png"><img src="img/guru_china_final.png" alt="guru china flyer" width="100%" height="100%" /></a>      
                         </div>
                     <div class="row info clearfix">
                         <div class="info-lft col">
