--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                  </div>
                  <div class="main col clearfix">
                         <div class="row">
-                        <a href="img/guru_china_final.png"><img src="img/guru_china_final.png" alt="guru china flyer" width="100%" height="100%" /></a>      
+                        <a href="img/young_guru_china.png"><img src="img/young_guru_china.png" alt="Young Guru China Flyer" width="100%" height="100%" /></a>      
                         </div>
                     <div class="row info clearfix">
                         <div class="info-lft col">
@@ -230,29 +230,6 @@
             </div> 
             <!-- Post End --> 
 
-            <!-- Post -->
-            <div class="row post">
-                 <div class="sidebar col clearfix">
-                    <h3>Colossal Wolf Clothing</h3>
-                    <p class="tags">Logo / Branding</p>
-                 </div>
-                 <div class="main col clearfix">
-                        <div class="row">
-                        <a href="img/colossalwolf1.png"><img src="img/colossalwolf1.png" width="100%" height="100%" /></a>
-                        </div>
-                    <div class="row info">
-                        <div class="info-lft col clearfix">
-                       <!-- Insert Body Text Here -->
-                        </div>
-
-                        <div class="info-rt col clearfix">
-                        <!-- Insert Body Image Here -->
-                        </div>
-                    </div>
-
-                 </div>
-            </div> 
-            <!-- Post End --> 
 
                 <!-- Back To Top -->
                     <div class="backToTop col clearfix">
@@ -273,7 +250,6 @@
                             <h3>Contact</h3>
                             <p>
                             <!-- Contact Link -->
-                            Patrick<br>
                             <a href="&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#105;&#110;&#102;&#111;&#64;&#110;&#101;&#109;&#100;&#100;&#101;&#115;&#105;&#103;&#110;&#46;&#99;&#111;&#109;&#32;">&#105;&#110;&#102;&#111;&#64;&#110;&#101;&#109;&#100;&#100;&#101;&#115;&#105;&#103;&#110;&#46;&#99;&#111;&#109;&#32;</a>
                             </p>
                         </div>
